# jsonml

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
jsonml/: __init__.py  exporter.py  parser.py
tests/: test_jsonml.py
workflows/: test.yml
